Fix spacing, alignment, spelling, and more

--- a/src/registrar/assets/src/sass/_theme/_forms.scss
+++ b/src/registrar/assets/src/sass/_theme/_forms.scss
@@ -99,7 +99,7 @@ legend.float-left-tablet + button.float-right-tablet {
 
 .alternative-domain-header {
   gap: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0;
 
   .delete-record {
     position: relative;
